--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <div class="top-bar">
           <a href="https://www.net-a-porter.com/en-us/shop/edit/gifts?cm_sp=homepage-_-auto-_-category-Gifts-ServiceRibbon-Default-Global-WebApp-_-13-11-23"><p class="font">Discover our ultimate gifting edit now</p> </a>
         </div>
-        <nav class="navbar"></nav>
+        <nav class="navbar">
+            <p class="paragraf">NET-A-PORTER</p>
+            <div>
+                <div class="account"></div>
+                <div class="flag"></div>
+                <div class="lang">English</div>
+            </div>
+        </nav>
         <div class="bottom-bar"></div>
     </header>
     <div class="top-img"></div>
