--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
     <div class="container">
         <div>
             <img  class="Picture2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915126/4e1c7802d8e33949c60a3a500c0a650e/desktop-data.jpg/w1500_q80.jpg"/>
+            <h1>All dressed up</h1>
+            <p>Searching for a sparkling-new party dress? Look no further</p>
         </div>
         <div>
             <img class="Picture3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915162/b1023b454dfe0f343f3af987c1de46fc/desktop-image-data.jpg/w1500_q80.jpg"/>
+            <h1>Thanksgiving at home</h1>
+            <p>Discover our edit of homeware gifts guaranteed to impress</p>
         </div>
     </div>
     <hr></hr>
