--- a/index.html
+++ b/index.html
@@ -37,17 +37,26 @@
         </div>
     </div>
     <hr></hr>
-    <section>
+    <section >
         <div class="bar">
-            <p></p>
-            <h1></h1>
-            <p></p>
+            <p>877 NEW ITEMS</p>
+            <h1>New In</h1>
+            <p>Stay ahead of the style curve with our latest arrivals</p>
+            <button></button>
         </div>
-<div class="container1">
-        <div class="photo-bar"></div>
-        <div class="photo-bar"></div>
-        <div class="photo-bar"></div>
-        <div class="photo-bar"></div>
+<div  class="container1">
+        <div >
+            <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331983254/in/w300.jpg"/>
+        </div>
+        <div>
+            <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597325144439/in/w300.jpg"/>
+        </div>
+        <div>
+            <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597324096273/in/w300.jpg"/>
+        </div>
+        <div>
+            <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331779489/in/w300.jpg"/>
+        </div>
 </div>
     </section>
     <hr></hr>
