--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <hr></hr>
-    <section >
+    <section>
         <div class="bar">
             <p>877 NEW ITEMS</p>
             <h1>New In</h1>
@@ -47,18 +47,50 @@
 <div  class="container1">
         <div >
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331983254/in/w300.jpg"/>
+            <p class="text">ALEXANDER MCQUEEN</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597325144439/in/w300.jpg"/>
+            <p class="text">LOEWE</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597324096273/in/w300.jpg"/>
+            <p class="text">GANNI</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331779489/in/w300.jpg"/>
+            <p class="text">ALEXANDER MCQUEEN</p>
         </div>
 </div>
     </section>
+    <div class="container3">
+            <div>
+            <img class="image" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915114/e1b788f67d3478923635f7d17b2782a4/desktop-image-data.jpg/w3000_q80.jpg"/>
+        </div>
+        <div class="text">
+            <h1>Winter-proof your wardrobe</h1>
+            <p>Presenting your fashion forecast of the most coveted cold wheather staples</p>
+            <button></button>
+        </div>
+    </div>
+    <div class="container5">
+        <div>
+            <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916248/9d6be4e048bc12ff775670bdd423321d/image-data.jpg/w1500_q65.jpg"/>
+            <p class="text1">LORO PIANA</p>
+        </div>
+        <div>
+            <img  class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916252/10898c6f56b8bb8cc63a804f38218c7a/image-data.jpg/w1500_q65.jpg"/>
+            <p class="text1">MAX MARA</p>
+        </div>
+        <div>
+            <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916264/8071463793ea3153dd86d7218275cfc6/image-data.jpg/w1500_q65.jpg"/>
+            <p class="text1">BRINELLO CUCINELLI</p>
+        </div>
+        <div>
+            <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916258/24ab2767a2140621250181447b1686cd/image-data.jpg/w1500_q65.jpg"/>
+            <p class="text1">KHAITE</p>
+        </div>
+    </div>
     <hr></hr>
     <div class="container2">
         <svg>
@@ -69,16 +101,7 @@
         <div><img/></div>
         <div><img/></div>
     </div>
-    <div class="container3">
-        <div>
-            <h1></h1>
-            <p></p>
-        </div>
-        <div>
-            <h1></h1>
-            <p></p>
-        </div>
-    </div>
+   
     <hr></hr>
     <div class="container4">
         <div><img/></div>
