adding more content

--- a/index.html
+++ b/index.html
@@ -93,13 +93,10 @@
     </div>
     <hr></hr>
     <div class="container2">
-        <svg>
-            <path/>
-        </svg>
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
+        <div><img class="image2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916236/b225a697590cdb83fe74ba41c29d9518/hp-module-1-data.jpg/w3000_q80.jpg"/></div>
+        <div><img class="image2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916234/1ec932e2936e85c4b763ec75120c63fb/hp-module-2-data.jpg/w3000_q80.jpg"/></div>
+        <div><img class="image2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916230/f334f19174242cc3fb3078c596361097/hp-module-4-data.jpg/w3000_q80.jpg"/></div>
+        <div><img class="image2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916232/5deeb4ca4ac0292e2f21deeebb7beca3/hp-module-3-data.jpg/w3000_q80.jpg"/></div>
     </div>
    
     <hr></hr>
