tha last for today

--- a/index.html
+++ b/index.html
@@ -112,16 +112,12 @@
                 <h1 class="text4">Anne Hathawey is bold carrier choses, viral fashion moments, and reliquisinh the pressure to get things right</h1>
                 <a  class="link" href="https://www.net-a-porter.com/en-us/porter">Red the interview & shop the shoot</a> 
             </div>
-
         </div>
-    </div>
-
-   
     <hr></hr>
     <div class="container4">
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
+        <div><img class="image3" src="https://tpc.googlesyndication.com/simgad/9082657375026531561?"/></div>
+        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915100/bb9238904e1ffc65f917e1284eb83435/image-data.jpg/w1500_q80.jpg"/></div>
+        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1925034/bf42653a8b2148fa21164f52b746f49d/image-data.png/w1500_q80.jpg"/></div>
     </div>
     <hr></hr>
     <div class="top-stories">
