--- a/index.html
+++ b/index.html
@@ -115,21 +115,51 @@
         </div>
     <hr></hr>
     <div class="container4">
-        <div><img class="image3" src="https://tpc.googlesyndication.com/simgad/9082657375026531561?"/></div>
-        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915100/bb9238904e1ffc65f917e1284eb83435/image-data.jpg/w1500_q80.jpg"/></div>
-        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1925034/bf42653a8b2148fa21164f52b746f49d/image-data.png/w1500_q80.jpg"/></div>
+        <div><img class="image3" src="https://tpc.googlesyndication.com/simgad/9082657375026531561?"/>
+        <h1></h1>
+        <p></p>
+        <a></a>
+    </div>
+        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915100/bb9238904e1ffc65f917e1284eb83435/image-data.jpg/w1500_q80.jpg"/>
+            <h1></h1>
+            <p></p>
+            <a></a>
+        </div>
+        <div><img class="image3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1925034/bf42653a8b2148fa21164f52b746f49d/image-data.png/w1500_q80.jpg"/>
+            <h1></h1>
+            <p></p>
+            <a></a>
+        </div>
     </div>
     <hr></hr>
     <div class="top-stories">
-        <p></p>
+        <p class="text4">Top Stories</p>
     </div>
     <div class="small-photos">
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
-        <div><img/></div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927622/15f8bc34c923f3794a8732b321774e94/image-1-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">FASHION</h1>
+            <p class="text5">The 7 key coat styles to try this season</p>
+        </div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927630/4e21d43c33a1313a20c504d6778faf93/image-2-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">FASHION</h1>
+            <p class="text5">What to wear to a holiday party: an expert guide</p>
+        </div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927636/d66270f48fb3ee40c5ecf7a6efa120b7/image-3-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">INCREDEBLE WOMEN</h1>
+            <p class="text5">Actor Mia McKenna-Bruce: a letter to my newborn son</p>
+        </div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927642/0d10445d47b7f5a47efd38cbf22a99e2/image-4-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">FASHION</h1>
+            <p class="text5">The knitted dresses to buy now – and how to style them</p>
+        </div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927648/8aaadffb654a5cead2560fc453eac3f6/image-5-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">FINE JEWELRY</h1>
+            <p class="text5">Why supersized, ‘jumbo’ jewels are trending again</p>
+        </div>
+        <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927654/27baf5f7019a9847800ccd30836ba318/image-6-data.jpg/w1500_q65.jpg"/>
+            <h1 class="text6">INTERIORS</h1>
+            <p class="text5">Inside Sophia Roe’s chic Copenhagen apartment</p>
+        </div>
     </div>
     <hr></hr>
     <div class="bottom-nav">
