--- a/index.html
+++ b/index.html
@@ -163,10 +163,26 @@
     </div>
     <hr></hr>
     <div class="bottom-nav">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img class="bottom-nav1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/680352/8f5602017863f5c4c449c3bef3accbfd/reflaunt-img-data.png/w0.png"/>
+            <h1 class="bottom-nav">Recell with NET-A-PORTER</h1>
+            <p class="bottom-nav">Take your pieces fro pre-loved to re-loved with out effortless sevice.</p>
+        </div>
+        <div>
+            <img class="bottom-nav2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434792/4848e9c4e47d080e473a542ebbe40e8f/advice-img-data.png/w0.png"/>
+            <h1 class="bottom-nav">Expert advice</h1>
+            <p class="bottom-nav">Eceptional costumer care with 24/7 live chat</p>
+        </div>
+        <div>
+            <img class="bottom-nav3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434878/61db477c386632a6f1ff2de9689d5091/apps-img-data.png/w0.png"/>
+            <h1 class="bottom-nav">Treat yourself with 10% off</h1>
+            <p class="bottom-nav">Download the app</p>
+        </div>
+        <div>
+            <img class="bottom-nav4" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1545584/fc0e4bdf7ca4967cbbc77ec162b8cb40/klarna-60x60px-data.png/w0.png"/>
+            <h1 class="bottom-nav">Klarna available</h1>
+            <p class="bottom-nav">We have partnered with Klarma</p>
+        </div>
     </div>
     <footer>
     <div class="bottom-nav2">
