--- a/index.html
+++ b/index.html
@@ -185,11 +185,22 @@
         </div>
     </div>
     <footer>
-    <div class="bottom-nav2">
-        <div></div>
-        <div></div>
+        <div class="container9">
+        <div>
+            <h1></h1>
+            <p></p>
+            <button></button>
+            <div class="social"></div>
+            
+        </div>
+        <div>
+            <h1></h1>
+            <h2></h2>
+            <p></p>
+            <button></button>
+        </div>
     </div>
-    <div class="bottom-nav3">
+    <div class="container10">
         <div></div>
         <div></div>
         <div></div>
