--- a/index.html
+++ b/index.html
@@ -187,17 +187,31 @@
     <footer>
         <div class="container9">
         <div>
-            <h1></h1>
-            <p></p>
-            <button></button>
-            <div class="social"></div>
-            
-        </div>
-        <div>
+            <h1>Enjoy 10% off your first order</h1>
+            <p>Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
+            <input type="email" placeholder="your@address.com"/>
+            <button type="submit">Submit</button>
+            <section class="SocialIcons2__container">
+                <ul class="SocialIcons2">
+                <li class="SocialIcons2__icon">
+                <a class="SocialIcons2__link SocialIcons2__link--youtube" href="http://www.youtube.com/subscription_center?add_user=netaporter" target="_blank" rel="noopener noreferrer" title="Youtube" data-icon="social-icon-link">Youtube</a>
+            </li>
+                <li class="SocialIcons2__icon">
+                <a class="SocialIcons2__link SocialIcons2__link--facebook" href="http://www.facebook.com/netaporter" target="_blank" rel="noopener noreferrer" title="Facebook" data-icon="social-icon-link">Facebook</a>
+            </li>
+                <li class="SocialIcons2__icon">
+                <a class="SocialIcons2__link SocialIcons2__link--twitter" href="https://twitter.com/NETAPORTER" target="_blank" rel="noopener noreferrer" title="Twitter" data-icon="social-icon-link">Twitter</a>
+            </li>
+                <li class="SocialIcons2__icon">
+                <a class="SocialIcons2__link SocialIcons2__link--instagram" href="http://instagram.com/netaporter" target="_blank" rel="noopener noreferrer" title="Instagram" data-icon="social-icon-link">Instagram</a>
+            </li>
+            </ul>
+            </section>
+                  <div>
             <h1></h1>
             <h2></h2>
             <p></p>
-            <button></button>
+           
         </div>
     </div>
     <div class="container10">
