--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css">
     <title>Net-a-porter></title>
+    <link rel="stylesheet" href="/assets/nap-sifu-e1fa5529.css">
     </head>
     <body>
         <header>
@@ -186,7 +187,7 @@
     </div>
     <footer>
         <div class="container9">
-        <div>
+            <div class="container12">
             <h1>Enjoy 10% off your first order</h1>
             <p>Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
             <input type="email" placeholder="your@address.com"/>
@@ -207,13 +208,14 @@
             </li>
             </ul>
             </section>
-                  <div>
-            <h1></h1>
-            <h2></h2>
-            <p></p>
-           
         </div>
-    </div>
+    <div class="container13">
+            <h1>NEED HELP?</h1>
+            <h2>For any enquiries please visit NET-A-PORTER</h2>
+            <a href="https://www.net-a-porter.com/en-us/content/help/exchanges-and-returns">Costumer Care</a>
+            <p>LOCATION & LANGUAGE</p>
+     </div>
+     </div>
     <div class="container10">
         <div></div>
         <div></div>
