--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css">
-    <title>Net-a-porter></title>
+    <title>Net-a-porter</title>
     <link rel="stylesheet" href="/assets/nap-sifu-e1fa5529.css">
     </head>
     <body>
@@ -22,45 +22,47 @@
         </nav>
         <div class="bottom-bar"></div>
     </header>
+<div class="top">
     <div class="top-img">
         <img class="Picture1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1914960/27812b4a65c7e787fb68b8daaa43ebd0/desktop-data.jpg/w3000_q80.jpg"/>
     </div>
     <div class="container">
         <div>
             <img  class="Picture2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915126/4e1c7802d8e33949c60a3a500c0a650e/desktop-data.jpg/w1500_q80.jpg"/>
-            <h1>All dressed up</h1>
-            <p>Searching for a sparkling-new party dress? Look no further</p>
+            <h1 style="font-size:3vw;">All dressed up</h1>
+            <p style="font-size:2vw;">Searching for a sparkling-new party dress? Look no further</p>
         </div>
         <div>
             <img class="Picture3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915162/b1023b454dfe0f343f3af987c1de46fc/desktop-image-data.jpg/w1500_q80.jpg"/>
-            <h1>Thanksgiving at home</h1>
-            <p>Discover our edit of homeware gifts guaranteed to impress</p>
+            <h1 style="font-size:3vw;">Thanksgiving at home</h1>
+            <p style="font-size:2vw;">Discover our edit of homeware gifts guaranteed to impress</p>
         </div>
     </div>
+</div>
     <hr></hr>
     <section>
         <div class="bar">
-            <p>877 NEW ITEMS</p>
-            <h1>New In</h1>
-            <p>Stay ahead of the style curve with our latest arrivals</p>
+            <p style="font-size:2vw;">877 NEW ITEMS</p>
+            <h1 style="font-size:2vw;">New In</h1>
+            <p style="font-size:2vw;">Stay ahead of the style curve with our latest arrivals</p>
             <button></button>
         </div>
 <div  class="container1">
         <div >
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331983254/in/w300.jpg"/>
-            <p class="text">ALEXANDER MCQUEEN</p>
+            <p class="text" style="font-size:1.5vw;">ALEXANDER MCQUEEN</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597325144439/in/w300.jpg"/>
-            <p class="text">LOEWE</p>
+            <p class="text" style="font-size:1.5vw;">LOEWE</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597324096273/in/w300.jpg"/>
-            <p class="text">GANNI</p>
+            <p class="text" style="font-size:1.5vw;">GANNI</p>
         </div>
         <div>
             <img class="photo-bar" src="https://www.net-a-porter.com/variants/images/1647597331779489/in/w300.jpg"/>
-            <p class="text">ALEXANDER MCQUEEN</p>
+            <p class="text" style="font-size:1.5vw;">ALEXANDER MCQUEEN</p>
         </div>
 </div>
     </section>
@@ -69,27 +71,27 @@
             <img class="image" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915114/e1b788f67d3478923635f7d17b2782a4/desktop-image-data.jpg/w3000_q80.jpg"/>
         </div>
         <div class="text">
-            <h1>Winter-proof your wardrobe</h1>
-            <p>Presenting your fashion forecast of the most coveted cold wheather staples</p>
+            <h1 style="font-size:3vw;">Winter-proof your wardrobe</h1>
+            <p style="font-size:2vw;">Presenting your fashion forecast of the most coveted cold wheather staples</p>
             <button></button>
         </div>
     </div>
     <div class="container5">
         <div>
             <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916248/9d6be4e048bc12ff775670bdd423321d/image-data.jpg/w1500_q65.jpg"/>
-            <p class="text1">LORO PIANA</p>
+            <p class="text1" style="font-size:1.5vw;">LORO PIANA</p>
         </div>
         <div>
             <img  class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916252/10898c6f56b8bb8cc63a804f38218c7a/image-data.jpg/w1500_q65.jpg"/>
-            <p class="text1">MAX MARA</p>
+            <p class="text1" style="font-size:1.5vw;">MAX MARA</p>
         </div>
         <div>
             <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916264/8071463793ea3153dd86d7218275cfc6/image-data.jpg/w1500_q65.jpg"/>
-            <p class="text1">BRINELLO CUCINELLI</p>
+            <p class="text1" style="font-size:1.5vw;">BRINELLO CUCINELLI</p>
         </div>
         <div>
             <img class="image1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1916258/24ab2767a2140621250181447b1686cd/image-data.jpg/w1500_q65.jpg"/>
-            <p class="text1">KHAITE</p>
+            <p class="text1" style="font-size:1.5vw;">KHAITE</p>
         </div>
     </div>
     <div class="container7"></div>
@@ -105,96 +107,96 @@
         </div>
         <div class="container8">
             <div class="text2">
-                <h1 class="text5">A New Era</h1>
-                <p class="text5">With Anne Hathawey</p>
+                <h1 class="text5" style="font-size:2vw;">A New Era</h1>
+                <p class="text5" style="font-size:1.5vw;">With Anne Hathawey</p>
             </div>
             <div class="text3">
-                <h1 class="text4">Anne Hathawey is bold carrier choses, viral fashion moments, and reliquisinh the pressure to get things right</h1>
-                <a  class="link" href="https://www.net-a-porter.com/en-us/porter">Red the interview & shop the shoot</a> 
+                <h1 class="text4" style="font-size:2vw;">Anne Hathawey is bold carrier choses, viral fashion moments, and reliquisinh the pressure to get things right</h1>
+                <a  class="link" href="https://www.net-a-porter.com/en-us/porter" style="font-size:1.5vw;">Red the interview & shop the shoot</a> 
             </div>
         </div>
     <hr></hr>
     <div class="top-stories">
-        <p class="text4">Top Stories</p>
+        <p class="text4" style="font-size:2vw;">Top Stories</p>
     </div>
     <div class="small-photos">
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927622/15f8bc34c923f3794a8732b321774e94/image-1-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">FASHION</h1>
-            <p class="text5">The 7 key coat styles to try this season</p>
+            <h1 class="text6"style="font-size:1.5vw;">FASHION</h1>
+            <p class="text5" style="font-size:1vw;">The 7 key coat styles to try this season</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927630/4e21d43c33a1313a20c504d6778faf93/image-2-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">FASHION</h1>
-            <p class="text5">What to wear to a holiday party: an expert guide</p>
+            <h1 class="text6" style="font-size:1.5vw;">FASHION</h1>
+            <p class="text5" style="font-size:1vw;">What to wear to a holiday party: an expert guide</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927636/d66270f48fb3ee40c5ecf7a6efa120b7/image-3-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">INCREDEBLE WOMEN</h1>
-            <p class="text5">Actor Mia McKenna-Bruce: a letter to my newborn son</p>
+            <h1 class="text6" style="font-size:1.5vw;">INCREDEBLE WOMEN</h1>
+            <p class="text5" style="font-size:1vw;">Actor Mia McKenna-Bruce: a letter to my newborn son</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927642/0d10445d47b7f5a47efd38cbf22a99e2/image-4-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">FASHION</h1>
-            <p class="text5">The knitted dresses to buy now – and how to style them</p>
+            <h1 class="text6" style="font-size:1.5vw;">FASHION</h1>
+            <p class="text5" style="font-size:1vw;">The knitted dresses to buy now – and how to style them</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927648/8aaadffb654a5cead2560fc453eac3f6/image-5-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">FINE JEWELRY</h1>
-            <p class="text5">Why supersized, ‘jumbo’ jewels are trending again</p>
+            <h1 class="text6" style="font-size:1.5vw;">FINE JEWELRY</h1>
+            <p class="text5" style="font-size:1vw;">Why supersized, ‘jumbo’ jewels are trending again</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927654/27baf5f7019a9847800ccd30836ba318/image-6-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6">INTERIORS</h1>
-            <p class="text5">Inside Sophia Roe’s chic Copenhagen apartment</p>
+            <h1 class="text6" style="font-size:1.5vw;">INTERIORS</h1>
+            <p class="text5" style="font-size:1vw;">Inside Sophia Roe’s chic Copenhagen apartment</p>
         </div>
     </div>
     <hr></hr>
     <div class="bottom-nav">
         <div>
             <img class="bottom-nav1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/680352/8f5602017863f5c4c449c3bef3accbfd/reflaunt-img-data.png/w0.png"/>
-            <h1 class="bottom-nav">Recell with NET-A-PORTER</h1>
-            <p class="bottom-nav">Take your pieces fro pre-loved to re-loved with out effortless sevice.</p>
+            <h1 class="bottom-nav" style="font-size:1vw;">Recell with NET-A-PORTER</h1>
+            <p class="bottom-nav" style="font-size:0.5vw;">Take your pieces fro pre-loved to re-loved with out effortless sevice.</p>
         </div>
         <div>
             <img class="bottom-nav2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434792/4848e9c4e47d080e473a542ebbe40e8f/advice-img-data.png/w0.png"/>
-            <h1 class="bottom-nav">Expert advice</h1>
-            <p class="bottom-nav">Eceptional costumer care with 24/7 live chat</p>
+            <h1 class="bottom-nav" style="font-size:1vw;">Expert advice</h1>
+            <p class="bottom-nav" style="font-size:0.5vw;">Eceptional costumer care with 24/7 live chat</p>
         </div>
         <div>
             <img class="bottom-nav3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434878/61db477c386632a6f1ff2de9689d5091/apps-img-data.png/w0.png"/>
-            <h1 class="bottom-nav">Treat yourself with 10% off</h1>
-            <p class="bottom-nav">Download the app</p>
+            <h1 class="bottom-nav" style="font-size:1vw;">Treat yourself with 10% off</h1>
+            <p class="bottom-nav" style="font-size:0.5vw;">Download the app</p>
         </div>
         <div>
             <img class="bottom-nav4" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1545584/fc0e4bdf7ca4967cbbc77ec162b8cb40/klarna-60x60px-data.png/w0.png"/>
-            <h1 class="bottom-nav">Klarna available</h1>
-            <p class="bottom-nav">We have partnered with Klarma</p>
+            <h1 class="bottom-nav" style="font-size:1vw;">Klarna available</h1>
+            <p class="bottom-nav" style="font-size:0.5vw;">We have partnered with Klarma</p>
         </div>
     </div>
     <footer>
         <div class="container9">
             <div class="container12">
-            <h1>Enjoy 10% off your first order</h1>
-            <p>Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
+            <h1 style="font-size:1vw;">Enjoy 10% off your first order</h1>
+            <p style="font-size:0.5vw;">Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
             <input type="email" placeholder="your@address.com"/>
             <button type="submit">Submit</button>
             <section class="SocialIcons2__container">
                 <ul class="SocialIcons2">
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--youtube" href="http://www.youtube.com/subscription_center?add_user=netaporter" target="_blank" rel="noopener noreferrer" title="Youtube" data-icon="social-icon-link">Youtube</a>
+                <a class="SocialIcons2__link SocialIcons2__link--youtube" href="http://www.youtube.com/subscription_center?add_user=netaporter" target="_blank" rel="noopener noreferrer" title="Youtube" data-icon="social-icon-link" style="font-size:1vw;">Youtube</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--facebook" href="http://www.facebook.com/netaporter" target="_blank" rel="noopener noreferrer" title="Facebook" data-icon="social-icon-link">Facebook</a>
+                <a class="SocialIcons2__link SocialIcons2__link--facebook" href="http://www.facebook.com/netaporter" target="_blank" rel="noopener noreferrer" title="Facebook" data-icon="social-icon-link" style="font-size:1vw;">Facebook</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--twitter" href="https://twitter.com/NETAPORTER" target="_blank" rel="noopener noreferrer" title="Twitter" data-icon="social-icon-link">Twitter</a>
+                <a class="SocialIcons2__link SocialIcons2__link--twitter" href="https://twitter.com/NETAPORTER" target="_blank" rel="noopener noreferrer" title="Twitter" data-icon="social-icon-link" style="font-size:1vw;">Twitter</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--instagram" href="http://instagram.com/netaporter" target="_blank" rel="noopener noreferrer" title="Instagram" data-icon="social-icon-link">Instagram</a>
+                <a class="SocialIcons2__link SocialIcons2__link--instagram" href="http://instagram.com/netaporter" target="_blank" rel="noopener noreferrer" title="Instagram" data-icon="social-icon-link" style="font-size:1vw;">Instagram</a>
             </li>
             </ul>
             </section>
         </div>
     <div class="container13">
-            <h1>NEED HELP?</h1>
-            <h2>For any enquiries please visit NET-A-PORTER</h2>
-            <a href="https://www.net-a-porter.com/en-us/content/help/exchanges-and-returns">Costumer Care</a>
-            <p>LOCATION & LANGUAGE</p>
+            <h1 style="font-size:1vw;">NEED HELP?</h1>
+            <h2 style="font-size:1vw;">For any enquiries please visit NET-A-PORTER</h2>
+            <a href="https://www.net-a-porter.com/en-us/content/help/exchanges-and-returns" style="font-size:1vw;">Costumer Care</a>
+            <p style="font-size:1vw;">LOCATION & LANGUAGE</p>
      </div>
      </div>
     <div class="container10">
