--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
         <div class="top-bar">
-          <a href="https://www.net-a-porter.com/en-us/shop/edit/gifts?cm_sp=homepage-_-auto-_-category-Gifts-ServiceRibbon-Default-Global-WebApp-_-13-11-23"><p class="font">Discover our ultimate gifting edit now</p> </a>
+          <a href="https://www.net-a-porter.com/en-us/shop/edit/gifts?cm_sp=homepage-_-auto-_-category-Gifts-ServiceRibbon-Default-Global-WebApp-_-13-11-23"><p class="font" style="font-size:1.5vw;">Discover our ultimate gifting edit now</p> </a>
         </div>
         <nav class="navbar">
             <p class="paragraf">NET-A-PORTER</p>
@@ -147,45 +147,45 @@
     <div class="bottom-nav">
         <div>
             <img class="bottom-nav1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/680352/8f5602017863f5c4c449c3bef3accbfd/reflaunt-img-data.png/w0.png"/>
-            <h1 class="bottom-nav" style="font-size:1vw;">Recell with NET-A-PORTER</h1>
-            <p class="bottom-nav" style="font-size:0.5vw;">Take your pieces fro pre-loved to re-loved with out effortless sevice.</p>
+            <h1 class="bottom-nav" style="font-size:1.5vw;">Recell with NET-A-PORTER</h1>
+            <p class="bottom-nav" style="font-size:1vw;">Take your pieces fro pre-loved to re-loved with out effortless sevice.</p>
         </div>
         <div>
             <img class="bottom-nav2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434792/4848e9c4e47d080e473a542ebbe40e8f/advice-img-data.png/w0.png"/>
-            <h1 class="bottom-nav" style="font-size:1vw;">Expert advice</h1>
-            <p class="bottom-nav" style="font-size:0.5vw;">Eceptional costumer care with 24/7 live chat</p>
+            <h1 class="bottom-nav" style="font-size:1.5vw;">Expert advice</h1>
+            <p class="bottom-nav" style="font-size:1vw;">Eceptional costumer care with 24/7 live chat</p>
         </div>
         <div>
             <img class="bottom-nav3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/434878/61db477c386632a6f1ff2de9689d5091/apps-img-data.png/w0.png"/>
-            <h1 class="bottom-nav" style="font-size:1vw;">Treat yourself with 10% off</h1>
-            <p class="bottom-nav" style="font-size:0.5vw;">Download the app</p>
+            <h1 class="bottom-nav" style="font-size:1.5vw;">Treat yourself with 10% off</h1>
+            <p class="bottom-nav" style="font-size:1vw;">Download the app</p>
         </div>
         <div>
             <img class="bottom-nav4" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1545584/fc0e4bdf7ca4967cbbc77ec162b8cb40/klarna-60x60px-data.png/w0.png"/>
-            <h1 class="bottom-nav" style="font-size:1vw;">Klarna available</h1>
-            <p class="bottom-nav" style="font-size:0.5vw;">We have partnered with Klarma</p>
+            <h1 class="bottom-nav" style="font-size:1.5vw;">Klarna available</h1>
+            <p class="bottom-nav" style="font-size:1vw;">We have partnered with Klarma</p>
         </div>
     </div>
     <footer>
         <div class="container9">
             <div class="container12">
-            <h1 style="font-size:1vw;">Enjoy 10% off your first order</h1>
-            <p style="font-size:0.5vw;">Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
-            <input type="email" placeholder="your@address.com"/>
-            <button type="submit">Submit</button>
+            <h1 style="font-size:2vw;">Enjoy 10% off your first order</h1>
+            <p style="font-size:1.5vw;">Claim your exclusive discount code when you subscribe to our emails. Terms and conditions apply</p>
+            <input type="email" placeholder="your@address.com" style="font-size:1.5vw;"/>
+            <button type="submit" style="font-size:1.5vw;">Submit</button>
             <section class="SocialIcons2__container">
                 <ul class="SocialIcons2">
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--youtube" href="http://www.youtube.com/subscription_center?add_user=netaporter" target="_blank" rel="noopener noreferrer" title="Youtube" data-icon="social-icon-link" style="font-size:1vw;">Youtube</a>
+                <a class="SocialIcons2__link SocialIcons2__link--youtube" href="http://www.youtube.com/subscription_center?add_user=netaporter" target="_blank" rel="noopener noreferrer" title="Youtube" data-icon="social-icon-link" style="font-size:1.5vw;">Youtube</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--facebook" href="http://www.facebook.com/netaporter" target="_blank" rel="noopener noreferrer" title="Facebook" data-icon="social-icon-link" style="font-size:1vw;">Facebook</a>
+                <a class="SocialIcons2__link SocialIcons2__link--facebook" href="http://www.facebook.com/netaporter" target="_blank" rel="noopener noreferrer" title="Facebook" data-icon="social-icon-link" style="font-size:1.5vw;">Facebook</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--twitter" href="https://twitter.com/NETAPORTER" target="_blank" rel="noopener noreferrer" title="Twitter" data-icon="social-icon-link" style="font-size:1vw;">Twitter</a>
+                <a class="SocialIcons2__link SocialIcons2__link--twitter" href="https://twitter.com/NETAPORTER" target="_blank" rel="noopener noreferrer" title="Twitter" data-icon="social-icon-link" style="font-size:1.5vw;">Twitter</a>
             </li>
                 <li class="SocialIcons2__icon">
-                <a class="SocialIcons2__link SocialIcons2__link--instagram" href="http://instagram.com/netaporter" target="_blank" rel="noopener noreferrer" title="Instagram" data-icon="social-icon-link" style="font-size:1vw;">Instagram</a>
+                <a class="SocialIcons2__link SocialIcons2__link--instagram" href="http://instagram.com/netaporter" target="_blank" rel="noopener noreferrer" title="Instagram" data-icon="social-icon-link" style="font-size:1.5vw;">Instagram</a>
             </li>
             </ul>
             </section>
