laptop view text inline

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="container8">
             <div class="text2">
                 <h1 class="text5" style="font-size:2vw;">A New Era</h1>
-                <p class="text5" style="font-size:1.5vw;">With Anne Hathawey</p>
+                <a class="link1" href="https://www.net-a-porter.com/en-us/porter/article-773de3de6dc8d800/cover-stories/cover-stories/after-dark-party-dressing" style="font-size:1.5vw;">With Anne Hathawey</a>
             </div>
             <div class="text3">
                 <h1 class="text4" style="font-size:2vw;">Anne Hathawey is bold carrier choses, viral fashion moments, and reliquisinh the pressure to get things right</h1>
-                <a  class="link" href="https://www.net-a-porter.com/en-us/porter" style="font-size:1.5vw;">Red the interview & shop the shoot</a> 
+                <a  class="link2" href="https://www.net-a-porter.com/en-us/porter" style="font-size:1.5vw;">Red the interview & shop the shoot</a> 
             </div>
         </div>
     <hr></hr>
