--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div>
             <img class="Picture3" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915162/b1023b454dfe0f343f3af987c1de46fc/desktop-image-data.jpg/w1500_q80.jpg"/>
             <h1 style="font-size:2.5vw;">Thanksgiving at home</h1>
-            <p style="font-size:1.5vw;">Discover our edit of homeware gifts guaranteed to impress</p>
+            <p style="font-size:1.5vw;" >Discover our edit of homeware gifts guaranteed to impress</p>
         </div>
     </div>
 </div>
@@ -67,8 +67,8 @@
             <img class="image" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915114/e1b788f67d3478923635f7d17b2782a4/desktop-image-data.jpg/w3000_q80.jpg"/>
         </div>
         <div class="text">
-            <h1 style="font-size:3vw;">Winter-proof your wardrobe</h1>
-            <p style="font-size:2vw;">Presenting your fashion forecast of the most coveted cold wheather staples</p>
+            <div class="text" style="font-size:3vw;">Winter-proof your wardrobe</div>
+            <div class="text" style="font-size:2vw;">Presenting your fashion forecast of the most coveted cold wheather staples</div>
         </div>
     </div>
     <div class="container5">
