--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="top-img">
         <img class="Picture1" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1914960/27812b4a65c7e787fb68b8daaa43ebd0/desktop-data.jpg/w3000_q80.jpg"/>
     </div>
+    <div class="cont"></div>
     <div class="container">
         <div>
             <img  class="Picture2" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1915126/4e1c7802d8e33949c60a3a500c0a650e/desktop-data.jpg/w1500_q80.jpg"/>
