--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <h1 style="font-size:1vw;">NEED HELP?</h1>
             <h2 style="font-size:1vw;">For any enquiries please visit NET-A-PORTER</h2>
             <a href="https://www.net-a-porter.com/en-us/content/help/exchanges-and-returns" style="font-size:1vw;">Costumer Care</a>
-            <p style="font-size:1vw;">LOCATION & LANGUAGE</p>
+            <h2 style="font-size:1vw;">LOCATION & LANGUAGE</h2>
      </div>
      </div>
     <div class="container10">
