--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p class="text5" style="font-size:1vw;">What to wear to a holiday party: an expert guide</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927636/d66270f48fb3ee40c5ecf7a6efa120b7/image-3-data.jpg/w1500_q65.jpg"/>
-            <h1 class="text6" style="font-size:1.5vw;">INCREDEBLE</h1>
+            <h1 class="text6" style="font-size:1.5vw;">INCREDIBLE</h1>
             <p class="text5" style="font-size:1vw;">Actor Mia McKenna-Bruce: a letter to my newborn son</p>
         </div>
         <div><img class="small-photos" src="https://www.net-a-porter.com/content/images/cms/ycm/resource/blob/1927642/0d10445d47b7f5a47efd38cbf22a99e2/image-4-data.jpg/w1500_q65.jpg"/>
